# spicyclaw

./: .env.example  .gitignore  PRD-CN.md  PRD.md  pyproject.toml
roles/: programmer.yaml  sysadmin.yaml
skills/: web-search.md
src/spicyclaw/: __init__.py  __main__.py  config.py
src/spicyclaw/common/: events.py  i18n.py  types.py
src/spicyclaw/gateway/: context.py  llm_client.py  roles.py  routes.py  sandbox.py  server.py  session.py  skills.py  workloop.py
src/spicyclaw/gateway/tools/: base.py  memory.py  shell.py  stop.py  summary.py
src/spicyclaw/ui/web/: router.py
src/spicyclaw/ui/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_commands.py  test_context.py  test_context_compact.py  test_fixes.py  test_i18n.py  test_integration_phase4.py  test_llm_client.py  test_llm_idle.py  test_memory_tool.py  test_roles.py  test_routes.py  test_sandbox.py  test_session.py  test_session_recovery.py  test_skills.py  test_step_mode.py  test_summary_tool.py  test_tools.py  test_types.py  test_web_ui.py  test_websocket.py  test_work_node_compact.py  test_workloop.py
