[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicyclaw"
version = "0.1.0"
description = "Lightweight AI Agent with OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
sandbox = ["docker>=7.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
spicyclaw = "spicyclaw.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spicyclaw"]
